Fix spacing in navbar

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -47,10 +47,10 @@ h3 {
 }
 
 .navbar-toggler-icon {
+    height: 1.3rem;
     border: none;
     outline: none;
     box-shadow: none;
-    height: 1.3rem;
 }
 
 .nav-link { 
@@ -61,18 +61,19 @@ h3 {
     letter-spacing: .2em;
     text-transform: uppercase;
     vertical-align: middle;
-    margin-right: 10px;
+    margin-right: 5px;
 }
 
 .navbar-custom {
     margin: 0;
-    padding: 5px 5px;
+    padding: 0;
     z-index: 5;
 }
 
 .navbar-left h1 {
     vertical-align: middle;
-    padding: 5px 10px;
+    margin-left: 5px;
+    padding: 5px 0 0 10px;
 }
 
 
@@ -160,6 +161,7 @@ h3 {
     padding: 5px;
     border: 1px solid #f3f3f5;
     border-radius: 4px;
+    outline-width: 0;
     transform: background-color ease .2s;
 }
 
@@ -184,7 +186,7 @@ input, label, textarea {
  .footer-section {
      background-color: #fff;
      bottom: 0;
-     padding: 30px 0;;
+     padding: 20px 0;;
      position: absolute;
      text-align: center;
      width: 100%;
